# rich-object

./: .gitignore  README.md  pyproject.toml  scratch.py  update.py
src/rich_object/: __init__.py  _differ.py  _renderer.py  _serializers.py  _transforms.py  _validator.py  object.py
tests/: test_object.py
