[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rich-object"
version = "0.1.0"
description = "A Python package containing rich-object utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["jsonpath-ng", "jinja2", "deepdiff"]

[tool.setuptools.packages.find]
where = ["src"]
