[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rich-object"
version = "0.1.0"
description = "A Python package containing rich-object utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonpath-ng~=1.7",
    "jinja2~=3.1",
    "deepdiff~=9.0",
    "pyyaml~=6.0",
    "tomli-w~=1.0",
    "tomli~=2.0; python_version < '3.11'",
    "jsonschema~=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

