[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rich-object"
version = "0.2.1"
description = "A Python package containing rich-object utilities"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonpath-ng~=1.7",
    "jinja2~=3.1",
    "deepdiff~=9.0",
    "pyyaml~=6.0",
    "tomli-w~=1.0",
    "jsonschema~=4.0",
    "orjson~=3.11",
]

[tool.setuptools.packages.find]
where = ["src"]

